[metadata]
name = scm-at-arqmath3
description = The Soft Cosine Measure at ARQMath3
long_description = file: README.md
long_description_content_type = 'text/markdown; charset=UTF-8'
url = 'https://github.com/witiko/scm-at-arqmath3'
author = Vit Novotny
author_email = witiko@mail.muni.cz
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Typing :: Typed
project_urls =
    Source = 'https://github.com/witiko/scm-at-arqmath3'
    Tracker = 'https://github.com/witiko/scm-at-arqmath3/issues'

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
    setuptools >= 40.6.0
    wheel
install_requires =
    more-itertools
    tqdm

[options.extras_require]
dataset =
    mathtuples @ git+https://github.com/fwtompa/mathtuples.git@888b3d5#egg=mathtuples
    pv211_utils @ git+https://github.com/MIR-MU/pv211-utils.git@1.1.6#egg=pv211_utils
    lxml == 4.8.0
transformers =
    numpy
    tokenizers == 0.12.1
    transformers >= 4.20.0
    torch
    adaptor @ git+https://github.com/gaussalgo/adaptor.git@f3d619c#egg=adaptor
test =
    flake8
    pytype
notebook =
    matplotlib
    jupyterlab
    pandas
word2vec =
    position-independent-embeddings @ git+https://github.com/MIR-MU/pine.git@cd29184#egg=pine
    %(transformers)s
scm =
    annoy == 1.17.0
    gensim @ git+https://github.com/witiko/gensim.git@feature/bm25#egg=gensim
evaluation =
    arqmath_eval @ git+https://github.com/MIR-MU/ARQMath-eval.git@0.0.22#egg=gensim
filelock =
    filelock == 3.7.1
typecheck =
    %(test)s
    %(dataset)s
    %(transformers)s
    %(evaluation)s
    %(word2vec)s
    %(filelock)s
system =
    %(filelock)s
    %(dataset)s
    %(scm)s
    %(evaluation)s
    %(transformers)s

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
